# rpcgrid

./: .flake8  .gitignore  LICENSE  Pipfile  README.md  pyfix.sh  pyproject.toml  pytest.ini  setup.cfg  setup.py
.github/workflows/: python-package.yml
examples/: app.py  client.py  server.py
examples/kafka_test/: docker-compose.yml  kaf_client.py  kaf_client_server.py  kaf_client_server2.py  kaf_fastapi.py  kaf_fastclient.py  kafkaapp.py  server.py
rpcgrid/: __init__.py  base.py  client.py  rpcgrid.py  server.py  task.py  version.py
rpcgrid/aio/: __init__.py  client.py  rpcgrid.py  server.py  task.py
rpcgrid/aio/providers/: __init__.py  base.py  local.py  rabbit.py  socket.py
rpcgrid/protocol/: base.py  jsonrpc.py
rpcgrid/providers/: __init__.py  base.py  kafka.py  local.py  rabbit.py  socket.py
tests/: asyncio_benchmark.py  benchmark.py  test_provider_local.py  test_socket.py  test_version.py
